# cr

.github/workflows/: build.yml  release.yml
gn_args/: minimal.gni
include/: cr_browser.h  cr_types.h
patches/: series
patches/cr/: 0001-add-cr-api-to-root-build.patch
scripts/: apply_patches.sh  fetch_chromium.sh  free_disk.sh  prune_source.sh  setup_build.sh
src/: BUILD.gn  cr_api.cc
