# Minimal GN args for a lean headless-only Chromium shared library.
# Verified against Chromium 136.x (May 2025).
#
# IMPORTANT: Only set flags that are safe to override.
# Chrome's root BUILD.gn includes test targets with assert(feature_flag) calls.
# Disabling those features here causes 'gn gen' to abort even though we never
# build those targets — GN parses all BUILD.gn files unconditionally.
# Rule: only change flags that don't appear in assert() calls.

# ── Compiler & linker ───────────────────────────────────────────────────────
is_clang                     = true
is_debug                     = false
use_lld                      = true
use_gold                     = false
clang_use_chrome_plugins     = false

# ── Symbols — zero for minimum size and RAM ──────────────────────────────────
symbol_level                 = 0
blink_symbol_level           = 0
v8_symbol_level              = 0
exclude_unwind_tables        = true
enable_iterator_debugging    = false

# ── Component build avoids the ~6 GB monolithic link step ────────────────────
is_component_build           = true

# ── No warnings-as-errors — our shim sits outside Chromium's style rules ─────
treat_warnings_as_errors     = false

# ── Ozone (replaces use_x11 / use_wayland in Chromium 136) ──────────────────
# Runtime platform selected via --ozone-platform=headless
use_ozone                    = true
ozone_platform_headless      = true
ozone_platform_x11           = false
ozone_platform_wayland       = false
ozone_auto_platforms         = false

# ── Safe-to-disable system deps (no assertions, purely optional) ──────────────
use_cups                     = false
use_kerberos                 = false
use_pulseaudio               = false
use_libpci                   = false
use_gnome_keyring            = false
use_udev                     = false

# ── No PGO or LTO — both need too much RAM and time on free runners ───────────
chrome_pgo_phase             = 0
use_thin_lto                 = false

# ── Rust — required in Chromium 136 (cargo_crate targets use rust_sysroot) ───
enable_rust                  = true

# ── Media ────────────────────────────────────────────────────────────────────
proprietary_codecs           = false
ffmpeg_branding              = "Chromium"

# ── PartitionAlloc — keep on (default true) ────────────────────────────────
use_partition_alloc_as_malloc = true

# ── Headless ─────────────────────────────────────────────────────────────────
headless_use_embedded_resources = false

# ── Branding ─────────────────────────────────────────────────────────────────
use_unofficial_version_number = false

# ── RTC tests — safe to disable (no assert) ──────────────────────────────────
rtc_include_tests            = false
